2009-05-18 Boris Mikhaylov <http://www.tmn.ru/~bor>
	* Fixed for higher compile warning level.
	* Extended cut frequency set from [300..1000] to [300..2000] Hz
	(BS2B_MAXFCUT)

2009-05-17 Sebastian Pipping <sebastian@pipping.org>
	* Apply compile fix patch for FreeBSD
	by Diego Elio Petteno (flameeyes@gentoo)

2009-03-31 Boris Mikhaylov <http://www.tmn.ru/~bor>

	3.0.0

	* Changed and extended presets.

2009-03-24 Boris Mikhaylov <http://www.tmn.ru/~bor>
	* Added unsigned 16/24/32 integer handling.

2009-03-23 Boris Mikhaylov <http://www.tmn.ru/~bor>
	* Normalization of integer samples are removed.
	* Added more switches to bs2bstream.

2009-03-17 Boris Mikhaylov <http://www.tmn.ru/~bor>
	* Added handling of big/little endian buffers.

2009-03-11 Boris Mikhaylov <http://www.tmn.ru/~bor>
	* Changed processing from one stereo sample to more.

2009-03-06 Boris Mikhaylov <http://www.tmn.ru/~bor>
	* libsndfile v1.0.17 -> v1.0.19.
	* Added more systems compatability (Integer types changed).
	* Move to new API.
	* Fixed 24bit data Native-bigendian handling.

2009-02-18 Sebastian Pipping <sebastian@pipping.org>
	* Shared lib (*nix) project started.

2009-02-17 Boris Mikhaylov <http://www.tmn.ru/~bor>
	* Sources are reorganized.

2009-02-02 Boris Mikhaylov <http://www.tmn.ru/~bor>

	2.2.0

	* Dynamic variables for multiply instances are used.
	* Compiled by MS VC++ 2008.
	* Nothing changed for a sound.

2006-11-14 Boris Mikhaylov <http://www.tmn.ru/~bor>

	2.1.0

	* Three new 'Easy' levels added.
	'High easy' level is close to Chu Moy's version of crossfeeder
	(http://headwize.com/projects/showfile.php?file=cmoy1_prj.htm)

2006-09-22 Boris Mikhaylov <http://www.tmn.ru/~bor>

	2.0.0

	* Change of license.
	* Package divided by library and plugins.
	* foobar2000 0.8 plugin package created.

2006-03-28 Boris Mikhaylov <http://www.tmn.ru/~bor>

	2.0.0b2 - test prerelease.

	* New plugin for foobar2000 0.9.
	* Plugin for foobar2000 0.8 have removed.